# PixTrigger

./: .gitignore  CMakeLists.txt  README.md  camcontrol.py  compilerFlags.cmake  pixtrig.py  pixtrigger.sh
exiv2test/: README.md  exiv2.cpp
gpio/: a.out  geotagging.py  gpio.c  gpio.py  gpio_usb_tag_save.py  interrupt.c  stray.c  usb_query.py
src/: CMakeLists.txt  a.out  autodetect.c  capture.cpp  capture.h  config.c  context.c  defines.h  exif.cpp  exif.h  exiv2apitest.cpp  first.cpp  interrupt.c  interrupt_capture  makefile  nocam_interrupt.c  path.cpp  path.h  single_capture  temp.cpp  usb.cpp  usb.h  v1
src/apps/: CMakeLists.txt  main.cpp
src/camera/: camera.py  test_cam.py
src/context/: context.c
src/conversion/: conversion.cpp
src/exif/: CMakeLists.txt  exif.cpp  exif.h
src/exiv2api/: exiv2API.cpp
src/gpio/: camera.py  geotagging.py  gpio.c  gpio_interrupt.py  gpio_save.py  gpio_usb_tag_save.py  interrupt.c  usb_query.py
src/headers/: capture.h  conversion.h  exiv2API.h  path.h  usb.h
src/include/: defines.h  geotag.h  path.h
src/modules/: CMakeLists.txt
src/modules/capture/: CMakeLists.txt
src/modules/geotag/: CMakeLists.txt
src/modules/interfaces/: CMakeLists.txt
src/modules/interfaces/gpio/: geotagging.py  gpio.c  gpio_interrupt.py  interrupt.c
src/modules/interfaces/usb/: CMakeLists.txt  getPath.cpp
src/path/: path.cpp
src/temp_exif_test/: exif_api.cpp  exif_api.h  exiv2.cpp  makefile  temp.cpp  v1
src/usb/: usb.cpp
